Attempt test role access.